Ensure flake content doesn't overflow flake div

--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -22,6 +22,10 @@
   margin-left: 2rem; }
 .flake-item {
   margin-left: 1rem;
-  margin-right: 1rem;
+  margin-right: 1rem; }
 .bold {
   font-weight: bold; }
+.ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: scroll; }
